-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
3
-
Dynamic LNET Configuration
-
16975
when CPT parameter is included in YAML output, the value should be enclosed in double quotes (").
Currently
net:
- net: lo
nid: 0@lo
status: up
tunables:
peer_timeout: 0
peer_credits: 0
peer_buffer_credits: 0
credits: 0
CPT: [0,0]
should be
net:
- net: lo
nid: 0@lo
status: up
tunables:
peer_timeout: 0
peer_credits: 0
peer_buffer_credits: 0
credits: 0
CPT: "[0,0]"
- is related to
-
LU-6043 DLC: lnetctl import does not configure any networks
-
- Resolved
-