LU-6099 lnet: correct YAML output

Currently when dumping out network configuration the parameter
CPT describes which cpu partitions the network is configured on.
The current output looks like:
CPT = [0,1,...]
however the library used to parse YAML doesn't accept the use of
'[', so now I enclose it in double quotes:
CPT = "[0,1,...]"

Signed-off-by: Amir Shehata <amir.shehata@intel.com>
Change-Id: Ib15b2bc7db9463875ee0414ef614d71a42039fbb
Reviewed-on: http://review.whamcloud.com/13304
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: James Simmons <uja.ornl@gmail.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>